--- a/animation/fadein.html
+++ b/animation/fadein.html
@@ -3,16 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Fade in example</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	{# <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> #}
 	<script type="text/javascript">
-		$=jQuery;
+		//$=jQuery;
 		$(window).on("load",function() {
 		  $(window).scroll(function() {
 		    var windowBottom = $(this).scrollTop() + $(this).innerHeight();
 		    $(".fade").each(function() {
 		      /* Check the location of each desired element */
 		      var objectBottom = $(this).offset().top + $(this).outerHeight();
-		      
+
 		      /* If the element is completely within bounds of the window, fade it in */
 		      if (objectBottom < windowBottom) { //object comes into view (scrolling down)
 		        if ($(this).css("opacity")==0) {$(this).fadeTo(500,1);}
@@ -31,10 +31,10 @@
 		  opacity: 1;
 		}
 		/*IMPORTANT ACCESSIBILITY IMPLEMENTATION
-			not all users will know how to turn off animations so we should have a setting to add a no animations class as well. 
+			not all users will know how to turn off animations so we should have a setting to add a no animations class as well.
 		*/
 		@media screen and
-		  (prefers-reduced-motion: reduce), 
+		  (prefers-reduced-motion: reduce),
 		  (update: slow) {
 		  * {
 		    animation-duration: 0.001ms !important;
@@ -51,7 +51,7 @@
 
 </head>
 <body class="">
-	
+
 
 	<div>
 	  <div class="fade">Fade In 01</div>
